Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* ufile.c:
	change write() to joe_write() to avoid partly copied files

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* termcap.c:
	strcmp() can return values other than -1/0/+1

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, macro.c, path.c, pw.c, queue.h, rc.c, regex.c, scrn.c,
	scrn.h, tab.c, termcap.c, termidx.c, tty.c, tw.c, ublock.c, uedit.c,
	uerror.c, ufile.c, uformat.c, undo.c, usearch.c, ushell.c, vfile.c,
	vs.c, w.c:
	change "expr, expr" to "expr; expr" where appropriate to make sources
	more readable (should have no impact on code)

Tue Jun  4 2002  Vitezslav Samel <samel@mail.cz>
	* scrn.c:
	don't clear screen when nonzero skiptop is given (part 2)

Mon Jun  3 2002  Vitezslav Samel <samel@mail.cz>
	* scrn.c:
	don't clear screen when nonzero skiptop is given

Sat Jun  1 2002  Vitezslav Samel <samel@mail.cz>
	* configure.ac, utils.c:
	kill warnings when compilling with -Wundef

Tue May 21 2002  Vitezslav Samel <samel@mail.cz>
	* poshist.c, scrn.c, uformat.c:
	include some headers which are needed to compile without warnings about
	implicit function declarations

Sun May  5 2002  Vitezslav Samel <samel@mail.cz>
	* NEWS:
	change wrong version for the last entry

Sun May  5 2002  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	solaris compile fix; check for snprintf - if not available, kick out

Sun Mar 10 2002  Vitezslav Samel <samel@mail.cz>
	* uformat.c:
	remove deadlock when reformating paragraph (badly converted whitel()
	to isspace() from removed zstr.c in joe-2.9.2)

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	use GCHAR macro - clean up the source

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	change 0 to NULL when used as pointer

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	change "expr, expr" to "expr; expr"

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, types.h: